--- a/detail/ID_accessSpecifierDisorder.html
+++ b/detail/ID_accessSpecifierDisorder.html
@@ -52,6 +52,8 @@ private:
 
 
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#nl16-use-a-conventional-class-member-declaration-order" target="_blank" class="related-link">C++ Core Guidelines NL.16</a></div>
 </article>
 </html>
