--- a/detail/ID_anonymousNamespaceInHeader.html
+++ b/detail/ID_anonymousNamespaceInHeader.html
@@ -46,6 +46,7 @@ ISO/IEC 14882:2011 7.3.1.1</div>
 <h3>参考</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#sf21-dont-use-an-unnamed-anonymous-namespace-in-a-header" target="_blank" class="related-link">C++ Core Guidelines SF.21</a>
-MISRA C++ 2008 7-3-3</div>
+MISRA C++ 2008 7-3-3
+<a href="https://wiki.sei.cmu.edu/confluence/display/cplusplus/DCL59-CPP.+Do+not+define+an+unnamed+namespace+in+a+header+file" target="_blank" class="related-link">SEI CERT DCL59-CPP</a></div>
 </article>
 </html>
