--- a/detail/ID_disorderedInitialization.html
+++ b/detail/ID_disorderedInitialization.html
@@ -66,6 +66,7 @@ ISO/IEC 14882:2011 12.6.2(10)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#c47-define-and-initialize-member-variables-in-the-order-of-member-declaration" target="_blank" class="related-link">C++ Core Guidelines C.47</a></div>
+<div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#c47-define-and-initialize-member-variables-in-the-order-of-member-declaration" target="_blank" class="related-link">C++ Core Guidelines C.47</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/cplusplus/OOP53-CPP.+Write+constructor+member+initializers+in+the+canonical+order" target="_blank" class="related-link">SEI CERT OOP53-CPP</a></div>
 </article>
 </html>
