--- a/detail/ID_evaluationOrderReliance.html
+++ b/detail/ID_evaluationOrderReliance.html
@@ -59,6 +59,7 @@ ISO/IEC 9899:2011 Annex C</div>
 <h3>参考</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#es43-avoid-expressions-with-undefined-order-of-evaluation" target="_blank" class="related-link">C++ Core Guidelines ES.43</a>
-<a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#es44-dont-depend-on-order-of-evaluation-of-function-arguments" target="_blank" class="related-link">C++ Core Guidelines ES.44</a></div>
+<a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#es44-dont-depend-on-order-of-evaluation-of-function-arguments" target="_blank" class="related-link">C++ Core Guidelines ES.44</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/EXP10-C.+Do+not+depend+on+the+order+of+evaluation+of+subexpressions+or+the+order+in+which+side+effects+take+place" target="_blank" class="related-link">SEI CERT EXP10-C</a></div>
 </article>
 </html>
