--- a/detail/ID_excessiveCharSign.html
+++ b/detail/ID_excessiveCharSign.html
@@ -23,7 +23,7 @@
 <main>
 <p>signed char、unsigned char 以及 int8_t、uint8_t 是整数类型，只应用于数值计算，不应用于存储字符。</p>
 
-<p>字符类型由整数类型实现，但应分清各自的职责，混用不利于阅读和维护。</p>
+<p>虽然字符类型由整数类型实现，但应分清各自的职责，混用不利于阅读和维护。</p>
 
 <p>示例：</p>
 <code>signed char a = &#x27;a&#x27;;     //<i> Non-compliant</i>
