--- a/detail/ID_if_semicolon.html
+++ b/detail/ID_if_semicolon.html
@@ -37,6 +37,7 @@
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/670.html" target="_blank" class="related-link">CWE-670</a></div>
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/670.html" target="_blank" class="related-link">CWE-670</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/EXP15-C.+Do+not+place+a+semicolon+on+the+same+line+as+an+if%2C+for%2C+or+while+statement" target="_blank" class="related-link">SEI CERT EXP15-C</a></div>
 </article>
 </html>
