--- a/detail/ID_illDealloc.html
+++ b/detail/ID_illDealloc.html
@@ -48,6 +48,7 @@ ISO/IEC 14882:2011 5.3.5(2)-undefined</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C 2012 22.2</div>
+<div class="ref-items">MISRA C 2012 22.2
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/MEM34-C.+Only+free+memory+allocated+dynamically" target="_blank" class="related-link">SEI CERT MEM34-C</a></div>
 </article>
 </html>
