--- a/detail/ID_incompleteNewDeletePair.html
+++ b/detail/ID_incompleteNewDeletePair.html
@@ -82,6 +82,7 @@ class C {
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r15-always-overload-matched-allocationdeallocation-pairs" target="_blank" class="related-link">C++ Core Guidelines R.15</a></div>
+<div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r15-always-overload-matched-allocationdeallocation-pairs" target="_blank" class="related-link">C++ Core Guidelines R.15</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/cplusplus/DCL54-CPP.+Overload+allocation+and+deallocation+functions+as+a+pair+in+the+same+scope" target="_blank" class="related-link">SEI CERT DCL54-CPP</a></div>
 </article>
 </html>
