--- a/detail/ID_macro_expNotEnclosed.html
+++ b/detail/ID_macro_expNotEnclosed.html
@@ -45,6 +45,7 @@ ISO/IEC 9899:2011 6.10.3.5(4)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/783.html" target="_blank" class="related-link">CWE-783</a></div>
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/783.html" target="_blank" class="related-link">CWE-783</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/PRE02-C.+Macro+replacement+lists+should+be+parenthesized" target="_blank" class="related-link">SEI CERT PRE02-C</a></div>
 </article>
 </html>
