--- a/detail/ID_macro_function.html
+++ b/detail/ID_macro_function.html
@@ -46,6 +46,7 @@ int foo(int a, int b) {
 <div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#es31-dont-use-macros-for-constants-or-functions" target="_blank" class="related-link">C++ Core Guidelines ES.31</a>
 MISRA C 2004 19.7
 MISRA C 2012 Dir 4.9
-MISRA C++ 2008 16-0-4</div>
+MISRA C++ 2008 16-0-4
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/PRE00-C.+Prefer+inline+or+static+functions+to+function-like+macros" target="_blank" class="related-link">SEI CERT PRE00-C</a></div>
 </article>
 </html>
