--- a/detail/ID_macro_paramNotEnclosed.html
+++ b/detail/ID_macro_paramNotEnclosed.html
@@ -50,6 +50,7 @@ ISO/IEC 9899:2011 6.10.3.5(4)</div>
 <div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/783.html" target="_blank" class="related-link">CWE-783</a>
 MISRA C 2004 19.10
 MISRA C 2012 20.7
-MISRA C++ 2008 16-0-6</div>
+MISRA C++ 2008 16-0-6
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/PRE01-C.+Use+parentheses+within+macros+around+parameter+names" target="_blank" class="related-link">SEI CERT PRE01-C</a></div>
 </article>
 </html>
