--- a/detail/ID_macro_stmtNotEnclosed.html
+++ b/detail/ID_macro_stmtNotEnclosed.html
@@ -57,6 +57,7 @@ ISO/IEC 9899:2011 6.10.3.5(4)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/483.html" target="_blank" class="related-link">CWE-483</a></div>
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/483.html" target="_blank" class="related-link">CWE-483</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/PRE10-C.+Wrap+multistatement+macros+in+a+do-while+loop" target="_blank" class="related-link">SEI CERT PRE10-C</a></div>
 </article>
 </html>
