--- a/detail/ID_nonBoolCondition.html
+++ b/detail/ID_nonBoolCondition.html
@@ -68,6 +68,7 @@
 <hr class="dashed-hr"/>
 <div class="ref-items">MISRA C 2012 14.4
 MISRA C++ 2008 5-0-13
-MISRA C++ 2008 5-0-14</div>
+MISRA C++ 2008 5-0-14
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/EXP20-C.+Perform+explicit+tests+to+determine+success%2C+true+and+false%2C+and+equality" target="_blank" class="related-link">SEI CERT EXP20-C</a></div>
 </article>
 </html>
