--- a/detail/ID_nonBoolSubCondition.html
+++ b/detail/ID_nonBoolSubCondition.html
@@ -43,6 +43,7 @@ if ((a != 0) || (b + c != 0))   //<i> Compliant</i></code>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C++ 2008 5-3-1</div>
+<div class="ref-items">MISRA C++ 2008 5-3-1
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/EXP20-C.+Perform+explicit+tests+to+determine+success%2C+true+and+false%2C+and+equality" target="_blank" class="related-link">SEI CERT EXP20-C</a></div>
 </article>
 </html>
