--- a/detail/ID_qualifierInvalid.html
+++ b/detail/ID_qualifierInvalid.html
@@ -48,6 +48,8 @@ const int_r&amp; r1 = a;  //<i> Non-compliant, r1 is not a const-reference at al
 ISO/IEC 14882:2011 8.3.2(1)
 ISO/IEC 14882:2017 11.3.2(1)</div>
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="https://wiki.sei.cmu.edu/confluence/display/cplusplus/DCL52-CPP.+Never+qualify+a+reference+type+with+const+or+volatile" target="_blank" class="related-link">SEI CERT DCL52-CPP</a></div>
 </article>
 </html>
