--- a/detail/ID_recursion.html
+++ b/detail/ID_recursion.html
@@ -23,7 +23,9 @@
 <main>
 <p>函数直接或间接调用自身可实现递归算法，但调用栈的消耗情况不够直观，易导致栈溢出等错误。</p>
 
-<p>应使用复杂度更易控制的方法代替函数调用自身这种实现方式，对于难以代替的特殊算法，应做到资源消耗可控。</p>
+<p>应使用成本更易控制的方法代替递归调用，对于难以代替的特殊算法，应做到调用深度可控。另外，main 函数、析构函数等特殊函数不可调用自身，否则会导致未定义的行为。</p>
+
+<p>C++ 模板元编程中的编译期递归调用可不受本规则限制。</p>
 
 <p>示例：</p>
 <code>size_t foo(size_t n) {
