--- a/detail/ID_this_selfJudgement.html
+++ b/detail/ID_this_selfJudgement.html
@@ -51,6 +51,7 @@ void foo(A* p, A* q) {
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#c62-make-copy-assignment-safe-for-self-assignment" target="_blank" class="related-link">C++ Core Guidelines C.62</a></div>
+<div class="ref-items"><a href="http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#c62-make-copy-assignment-safe-for-self-assignment" target="_blank" class="related-link">C++ Core Guidelines C.62</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/cplusplus/OOP54-CPP.+Gracefully+handle+self-copy+assignment" target="_blank" class="related-link">SEI CERT OOP54-CPP</a></div>
 </article>
 </html>
