--- a/detail/ID_violateODR.html
+++ b/detail/ID_violateODR.html
@@ -58,6 +58,7 @@ ISO/IEC 14882:2011 3.2(5)-undefined</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C++ 2008 3-2-2</div>
+<div class="ref-items">MISRA C++ 2008 3-2-2
+<a href="https://wiki.sei.cmu.edu/confluence/display/cplusplus/DCL60-CPP.+Obey+the+one-definition+rule" target="_blank" class="related-link">SEI CERT DCL60-CPP</a></div>
 </article>
 </html>
