--- a/detail/ID_invalidCondition.html
+++ b/detail/ID_invalidCondition.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：以恒为真或恒为假的表达式作为条件是没有意义的，属于逻辑错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：恒为真或恒为假的表达式无法改变程序的流程，不应作为控制条件，否则会造成逻辑错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>作为条件的逻辑表达式不应恒为真或恒为假 - C/C++ 安全规则</title>
+  <title>作为控制条件的逻辑表达式不应恒为真或恒为假 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>作为条件的逻辑表达式不应恒为真或恒为假</h1>
+  <h1>作为控制条件的逻辑表达式不应恒为真或恒为假</h1>
   <div id="subtitle">
     <div id="subtitle-id">10.1.3 ID_invalidCondition</div>
     <div id="subtitle-tags">
@@ -21,7 +21,9 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>以恒为真或恒为假的表达式作为条件是没有意义的，属于逻辑错误。</p>
+<p>恒为真或恒为假的表达式无法改变程序的流程，不应作为控制条件，否则会造成逻辑错误。</p>
+
+<p>当控制条件为常量表达式时，本规则特化为 <a href="./ID_constLogicExpression.html" class="dashed-link">ID_constLogicExpression</a>。</p>
 
 <p>示例：</p>
 <code>void foo() {
