--- a/detail/ID_while_brace.html
+++ b/detail/ID_while_brace.html
@@ -57,6 +57,7 @@ while (condition) {   //<i> Compliant</i>
 <hr class="dashed-hr"/>
 <div class="ref-items">MISRA C 2004 14.8
 MISRA C 2012 15.6
-MISRA C++ 2008 6-3-1</div>
+MISRA C++ 2008 6-3-1
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/EXP19-C.+Use+braces+for+the+body+of+an+if%2C+for%2C+or+while+statement" target="_blank" class="related-link">SEI CERT EXP19-C</a></div>
 </article>
 </html>
